small stuff, testing, comments

--- a/OrderManager/src/main/resources/customization-view.fxml
+++ b/OrderManager/src/main/resources/customization-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ordermanager.ordermanager.controller.CustomizationViewController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ordermanager.ordermanager.controller.CustomizationController">
     <children>
         <Label fx:id="title" alignment="CENTER" text="Pizza Type" />
       <HBox>
