--- a/OrderManagerApp/app/src/main/res/layout/main_menu_activity.xml
+++ b/OrderManagerApp/app/src/main/res/layout/main_menu_activity.xml
@@ -23,21 +23,21 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/addDeluxe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/deluxe" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/addHawaiian"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/hawaiian" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/addPepperoni"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -45,13 +45,13 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/currentOrder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/current_order" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/storeOrders"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:insetTop="50dp"
