--- a/OrderManagerApp/app/src/main/res/layout/add_pizza_activity.xml
+++ b/OrderManagerApp/app/src/main/res/layout/add_pizza_activity.xml
@@ -32,7 +32,8 @@
             <RadioGroup
                 android:id="@+id/sizeRadioGroup"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:checkedButton="@+id/small">
 
                 <RadioButton
                     android:id="@+id/small"
@@ -58,7 +59,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Additional Toppings:" />
+                android:text="Preset Toppings:" />
 
             <LinearLayout
                 android:id="@+id/presetToppingsLayout"
@@ -70,7 +71,7 @@
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Preset Toppings:" />
+                android:text="Additional Toppings:" />
 
             <LinearLayout
                 android:id="@+id/additionalToppingsLayout"
@@ -82,7 +83,8 @@
                 android:id="@+id/orderButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Order Pizza" />
+                android:text="Order Pizza"
+                android:onClick="orderPizza"/>
 
         </LinearLayout>
     </ScrollView>
