--- a/OrderManagerApp/app/src/main/res/layout/main_menu_activity.xml
+++ b/OrderManagerApp/app/src/main/res/layout/main_menu_activity.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,19 +8,23 @@
         android:layout_width="409dp"
         android:layout_height="641dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="88dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/order_new" />
+            android:text="@string/order_new"
+            android:gravity="center"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="154dp"
             android:orientation="horizontal">
+
 
             <Button
                 android:id="@+id/addDeluxe"
@@ -48,14 +52,16 @@
             android:id="@+id/currentOrder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/current_order" />
+            android:text="@string/current_order"
+            android:onClick="viewCurrentOrder"/>
 
         <Button
             android:id="@+id/storeOrders"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:insetTop="50dp"
-            android:text="@string/store_orders" />
+            android:text="@string/store_orders"
+            android:onClick="viewStoreOrders"/>
 
     </LinearLayout>
 
